force-app/main/default/objects/QEC_ContractTMCInfo__c/QEC_ContractTMCInfo__c.object-meta.xml
<CustomObject>
    <label>Contract TMC Info</label>
    <nameField>
        <displayFormat>TATMC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract TMC Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>