force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract TMC Info</relationshipLabel>
    <relationshipName>Contract_TMC_Info</relationshipName>
    <type>Lookup</type>
</CustomField>