force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <formula>Text(TMC_Info__r.Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDS</label>
    <type>Text</type>
</CustomField>