force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>History flag to display records in TMC PCC Management</description>
    <label>History</label>
    <type>Checkbox</type>
</CustomField>