force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <formula>TMC_Info__r.Account__r.Qantas_Industry_Centre_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IATA #</label>
    <type>Text</type>
</CustomField>