force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <formula>TMC_Info__r.PCC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCC</label>
    <type>Text</type>
</CustomField>