force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/PCC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PCC_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCC Start Date</label>
    <type>Date</type>
</CustomField>