force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Contract TMC Info</relationshipLabel>
    <relationshipName>Contract_TMC_Info</relationshipName>
    <type>Lookup</type>
</CustomField>