force-app/main/default/objects/QEC_ContractTMCInfo__c/fields/TMC_Info__c.field-meta.xml
<CustomField>
    <fullName>TMC_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC Info</label>
    <referenceTo>Agency_Info__c</referenceTo>
    <relationshipName>ContractTMCInfo</relationshipName>
    <type>Lookup</type>
</CustomField>